--- a/helm-charts/templates/annif-app.yaml
+++ b/helm-charts/templates/annif-app.yaml
@@ -27,7 +27,7 @@ spec:
         app: annif-app
     spec:
       containers:
-        - image: quay.io/natlibfi/annif:0.52
+        - image: quay.io/natlibfi/annif:{{ .Values.annifVersion }}
           command: ["gunicorn", "annif:create_app()", "--bind", "0.0.0.0:8000", "--timeout", "600"]
           livenessProbe:
             exec:
@@ -37,9 +37,7 @@ spec:
             periodSeconds: 15
           name: annif-app
           resources:
-            limits:
-              cpu: 2  # TODO Check if cpu limit can be decreased, to 1 maybe
-              memory: 26Gi
+            {{ toYaml .Values.annifResources | nindent 12 }}
           volumeMounts:
             - mountPath: /annif-projects
               name: model-data
