--- a/helm-charts/values.yaml
+++ b/helm-charts/values.yaml
@@ -2,85 +2,29 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-#replicaCount: 1
-#
-#image:
-#  repository: nginx
-#  pullPolicy: IfNotPresent
-#  # Overrides the image tag whose default is the chart appVersion.
-#  tag: ""
-#
-#imagePullSecrets: []
-#nameOverride: ""
-#fullnameOverride: ""
-#
-#serviceAccount:
-#  # Specifies whether a service account should be created
-#  create: true
-#  # Annotations to add to the service account
-#  annotations: {}
-#  # The name of the service account to use.
-#  # If not set and create is true, a name is generated using the fullname template
-#  name: ""
-#
-#podAnnotations: {}
-#
-#podSecurityContext: {}
-#  # fsGroup: 2000
-#
-#securityContext: {}
-#  # capabilities:
-#  #   drop:
-#  #   - ALL
-#  # readOnlyRootFilesystem: true
-#  # runAsNonRoot: true
-#  # runAsUser: 1000
-#
-#service:
-#  type: ClusterIP
-#  port: 80
-#
-#ingress:
-#  enabled: false
-#  className: ""
-#  annotations: {}
-#    # kubernetes.io/ingress.class: nginx
-#    # kubernetes.io/tls-acme: "true"
-#  hosts:
-#    - host: chart-example.local
-#      paths:
-#        - path: /
-#          pathType: ImplementationSpecific
-#  tls: []
-#  #  - secretName: chart-example-tls
-#  #    hosts:
-#  #      - chart-example.local
-#
-#resources: {}
-#  # We usually recommend not to specify default resources and to leave this as a conscious
-#  # choice for the user. This also increases chances charts run on environments with little
-#  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-#  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-#  # limits:
-#  #   cpu: 100m
-#  #   memory: 128Mi
-#  # requests:
-#  #   cpu: 100m
-#  #   memory: 128Mi
-#
-#autoscaling:
-#  enabled: false
-#  minReplicas: 1
-#  maxReplicas: 100
-#  targetCPUUtilizationPercentage: 80
-#  # targetMemoryUtilizationPercentage: 80
-#
-#nodeSelector: {}
-#
-#tolerations: []
-#
-#affinity: {}
-#
 instance: ai-finto-fi
 contextDir: /ai.finto.fi
 host: ai.finto.fi.ext.ocp-kk-test-0.k8s.it.helsinki.fi
+
+# TODO: Unpin version for dev instance by changing to "latest"?
+nginxVersion: "1.18-ubi8"
+# Triggers for automatic builds are not in place for prod instance.
+# To manually start a build: "oc start-build ai-finto-fi-nginx"
+nginxBuildTriggers:
+  #- type: GitHub
+  #  github:
+  #    secretReference:
+  #      name: ai-finto-fi-github-webhook-secret
+  #- type: ImageChange
+  #  imageChange: {}
+  - type: ConfigChange
+
+
+annifVersion: "0.52"
+annifResources:
+  limits:
+    cpu: 1
+    memory: 26Gi
+
+matomoServerUrl: ***REMOVED***
+matomoSiteId: "15"  # TODO Change to prod id when deploying for real
