--- a/helm-charts/templates/nginx-service.yaml
+++ b/helm-charts/templates/nginx-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  name: {{ .Values.instance }}-nginx
 spec:
   selector:
     app: {{ .Values.instance }}-nginx
