Make imagestream for Matomo instance specific

--- a/helm-charts/templates/matomo-buildconfig.yaml
+++ b/helm-charts/templates/matomo-buildconfig.yaml
@@ -9,7 +9,7 @@ spec:
   output:
     to:
       kind: ImageStreamTag
-      name: 'matomo-log-analytics:latest'
+      name: '{{ .Values.instance }}-matomo-log-analytics:latest'
   successfulBuildsHistoryLimit: 5
   failedBuildsHistoryLimit: 5
   strategy:
