--- a/helm-charts/templates/matomo-imagestream.yaml
+++ b/helm-charts/templates/matomo-imagestream.yaml
@@ -1,4 +1,4 @@
 apiVersion: image.openshift.io/v1
 kind: ImageStream
 metadata:
-  name: matomo-log-analytics
+  name: {{ .Values.instance }}-matomo-log-analytics
