--- a/helm-charts/values-api.annif.org.yaml
+++ b/helm-charts/values-api.annif.org.yaml
@@ -1,9 +1,9 @@
-# Default values for annif-helm.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 instance: api-annif-org
 contextDir: /api.annif.org
+# TODO: Switch host to api.annif.org
 host: api.annif.org.ext.ocp-kk-test-0.k8s.it.helsinki.fi
 
 # TODO: Unpin version for dev instance by changing to "latest"?
