--- a/helm-charts/values-ai.finto.fi.yaml
+++ b/helm-charts/values-ai.finto.fi.yaml
@@ -19,12 +19,12 @@ nginxBuildTriggers:
   #  imageChange: {}
   - type: ConfigChange
 
-
 annifVersion: "0.52"
 annifResources:
   limits:
     cpu: 1
     memory: 26Gi
+annifModelDataStorage: 25Gi
 
 matomoServerUrl: https://tilasto.lib.helsinki.fi
 matomoSiteId: "15"  # TODO Change to prod id when deploying for real
