--- a/helm-charts/templates/annif-app-persistentvolumeclaim.yaml
+++ b/helm-charts/templates/annif-app-persistentvolumeclaim.yaml
@@ -2,6 +2,8 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: {{ .Values.instance }}-model-data
+  labels:
+    app.kubernetes.io/instance: {{ .Values.instance }}
 spec:
   accessModes:
     - ReadWriteOnce
