--- a/helm-charts/templates/matomo-buildconfig.yaml
+++ b/helm-charts/templates/matomo-buildconfig.yaml
@@ -5,6 +5,7 @@ metadata:
   name: {{ .Values.instance }}-matomo-log-analytics
   labels:
     app: matomo-log-analytics
+    app.kubernetes.io/instance: {{ .Values.instance }}
 spec:
   output:
     to:
