--- a/helm-charts/templates/matomo-imagestream.yaml
+++ b/helm-charts/templates/matomo-imagestream.yaml
@@ -2,3 +2,5 @@ apiVersion: image.openshift.io/v1
 kind: ImageStream
 metadata:
   name: {{ .Values.instance }}-matomo-log-analytics
+  labels:
+    app.kubernetes.io/instance: {{ .Values.instance }}
