--- a/helm-charts/templates/nginx-buildconfig.yaml
+++ b/helm-charts/templates/nginx-buildconfig.yaml
@@ -2,6 +2,8 @@ kind: BuildConfig
 apiVersion: build.openshift.io/v1
 metadata:
   name: {{ .Values.instance }}-nginx
+  labels:
+    app.kubernetes.io/instance: {{ .Values.instance }}
 spec:
   strategy:
     type: Source
