--- a/helm-charts/templates/nginx-configmap.yaml
+++ b/helm-charts/templates/nginx-configmap.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ .Values.instance }}-nginx-conf
+  labels:
+    app.kubernetes.io/instance: {{ .Values.instance }}
 data:
   http-context.conf: |-
     client_max_body_size 5M;
