--- a/helm-charts/templates/nginx-imagestream.yaml
+++ b/helm-charts/templates/nginx-imagestream.yaml
@@ -2,3 +2,5 @@ apiVersion: image.openshift.io/v1
 kind: ImageStream
 metadata:
   name: {{ .Values.instance }}-nginx
+  labels:
+    app.kubernetes.io/instance: {{ .Values.instance }}
