--- a/helm-charts/templates/nginx-service.yaml
+++ b/helm-charts/templates/nginx-service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.instance }}-nginx
+  labels:
+    app.kubernetes.io/instance: {{ .Values.instance }}
 spec:
   selector:
     app: {{ .Values.instance }}-nginx
