--- a/helm-charts/templates/annif-app-persistentvolumeclaim.yaml
+++ b/helm-charts/templates/annif-app-persistentvolumeclaim.yaml
@@ -9,4 +9,4 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: {{ .Values.annifModelDataStorage }}
+      storage: {{ .Values.annif.modelDataStorage }}
