--- a/helm-charts/templates/nginx-logs-persistentvolumeclaim.yaml
+++ b/helm-charts/templates/nginx-logs-persistentvolumeclaim.yaml
@@ -9,4 +9,4 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: {{ .Values.logsStorage }}
+      storage: {{ .Values.nginx.logsStorage }}
