--- a/helm-charts/templates/annif-app-service.yaml
+++ b/helm-charts/templates/annif-app-service.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.instance }}-annif-app
+  name: {{ .Values.instance }}-annif
   labels:
     app.kubernetes.io/instance: {{ .Values.instance }}
 spec:
   selector:
-    app: annif-app
+    app.kubernetes.io/name: annif
+    app.kubernetes.io/instance: {{ .Values.instance }}
   ports:
   - port: 8000
