Revert "Remove (apparently unnecessary) podAffinity from Matomo"
This reverts commit c4698bb17ab96d300b006673a67bdf2cb2818341.

--- a/helm-charts/templates/matomo-deployment.yaml
+++ b/helm-charts/templates/matomo-deployment.yaml
@@ -52,3 +52,14 @@ spec:
           persistentVolumeClaim:
             claimName: {{ .Values.instance }}-logs
             readOnly: True
+      # Matomo script needs to be run on the same node as nginx:
+      affinity:
+        podAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+          - labelSelector:
+              matchExpressions:
+              - key: app
+                operator: In
+                values:
+                - {{ .Values.instance }}-nginx
+            topologyKey: kubernetes.io/hostname
