--- a/helm-charts/templates/annif-app-deployment.yaml
+++ b/helm-charts/templates/annif-app-deployment.yaml
@@ -21,7 +21,8 @@ spec:
         app.kubernetes.io/instance: {{ .Values.instance }}
     spec:
       containers:
-        - image: quay.io/natlibfi/annif:{{ .Values.annif.version }}
+        - name: annif
+          image: quay.io/natlibfi/annif:{{ .Values.annif.version }}
           command: ["gunicorn", "annif:create_app()", "--bind", "0.0.0.0:8000", "--timeout", "600"]
           livenessProbe:
             exec:
@@ -29,7 +30,6 @@ spec:
             failureThreshold: 3
             initialDelaySeconds: 600
             periodSeconds: 15
-          name: annif
           resources:
             {{ toYaml .Values.annif.resources | nindent 12 }}
           volumeMounts:
@@ -37,6 +37,9 @@ spec:
               name: model-data
               # TODO: Switch to readOnly, if model syncing method allows.
               #readOnly: true
+          env:
+            - name: TZ
+              value: {{ .Values.timezone }}
       volumes:
         - name: model-data
           persistentVolumeClaim:
