--- a/helm-charts/values-ai.finto.fi.yaml
+++ b/helm-charts/values-ai.finto.fi.yaml
@@ -7,8 +7,8 @@ host: ai.finto.fi.ext.ocp-kk-test-0.k8s.it.helsinki.fi
 timezone: "Europe/Helsinki"
 
 nginx:
-  version: '1.18'  # TODO Update, but why isn't tag 1.20 found?
-  baseImage: 'ubi8'  # Is this needed at all?
+  version: '1.20'
+  baseImage: 'ubi8'
   git:
     uri: 'https://github.com/NatLibFi/FintoAI.git'
     ref: 'master'
