Try configuring requests to textract API in OCP

--- a/helm-charts/values-ai.dev.finto.fi.yaml
+++ b/helm-charts/values-ai.dev.finto.fi.yaml
@@ -35,3 +35,6 @@ annif:
 matomo:
   serverUrl: 'https://tilasto.lib.helsinki.fi'
   siteId: '15'  # TODO Change to prod id when deploying for real
+
+textract:
+  port: 8001
