Temporarily switch to fetch webpage content from this branch

--- a/helm-charts/values-ai.dev.finto.fi.yaml
+++ b/helm-charts/values-ai.dev.finto.fi.yaml
@@ -1,7 +1,7 @@
 cluster: 'test'  # TODO Drop this when hostname is transferred
 nginx:
   git:
-    ref: 'update-2022'
+    ref: 'url-extraction'  # TODO Switch to main
     uri: 'https://github.com/NatLibFi/FintoAI.git'
   contextDir: '/ai.finto.fi'
 
