Try to allow uploading larger files to textract API endpoint

--- a/helm-charts/templates/nginx-configmap.yaml
+++ b/helm-charts/templates/nginx-configmap.yaml
@@ -31,5 +31,6 @@ data:
         deny  all;
     }
     location /textract {
+        client_max_body_size 50M;
         proxy_pass http://textract;
     }
