Increase cpu-limit of textract container
Speeds up processing of gradu.pdf (10 MB) about 1 s, which now afterwards takes 11 s in total via network upload with client.py

--- a/helm-charts/templates/textract-deployment.yaml
+++ b/helm-charts/templates/textract-deployment.yaml
@@ -27,6 +27,8 @@ spec:
             failureThreshold: 3
             initialDelaySeconds: 5
             periodSeconds: 15
+          resources:
+            {{ toYaml .Values.textract.resources | nindent 12 }}
           env:
             - name: PORT
               value: {{ quote .Values.textract.port }}
