--- a/helm-charts/templates/annif-app-service.yaml
+++ b/helm-charts/templates/annif-app-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.instance }}-annif
+  name: {{ .Release.Name }}-annif
   labels:
-    app.kubernetes.io/instance: {{ .Values.instance }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
 spec:
   selector:
     app.kubernetes.io/name: annif
-    app.kubernetes.io/instance: {{ .Values.instance }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
   ports:
   - port: 8000
