--- a/helm-charts/templates/matomo-deployment.yaml
+++ b/helm-charts/templates/matomo-deployment.yaml
@@ -1,27 +1,27 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: {{ .Values.instance }}-matomo-log-analytics
+  name: {{ .Release.Name }}-matomo-log-analytics
   labels:
     app.kubernetes.io/name: matomo-log-analytics
-    app.kubernetes.io/instance: {{ .Values.instance }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
 spec:
   replicas: 1
   selector:
     matchLabels:
       app.kubernetes.io/name: matomo-log-analytics
-      app.kubernetes.io/instance: {{ .Values.instance }}
+      app.kubernetes.io/instance: {{ .Release.Name }}
   template:
     metadata:
       labels:
         app.kubernetes.io/name: matomo-log-analytics
-        app.kubernetes.io/instance: {{ .Values.instance }}
+        app.kubernetes.io/instance: {{ .Release.Name }}
     spec:
       # TODO Add init-containers to clear logs?
       containers:
         - name: matomo-log-analytics
           image: >-
-            image-registry.openshift-image-registry.svc:5000/annif/{{ .Values.instance }}-matomo-log-analytics:latest
+            image-registry.openshift-image-registry.svc:5000/annif/{{ .Release.Name }}-matomo-log-analytics:latest
           command: ["/bin/sh", "-c"]
           args:
             - tail -f /logs/nginx-access.log | python /opt/app-root/src/import_logs.py
@@ -52,7 +52,7 @@ spec:
       volumes:
         - name: logs
           persistentVolumeClaim:
-            claimName: {{ .Values.instance }}-logs
+            claimName: {{ .Release.Name }}-logs
             readOnly: True
       # Matomo script needs to be run on the same node as nginx:
       affinity:
@@ -61,5 +61,5 @@ spec:
           - labelSelector:
               matchLabels:
                 app.kubernetes.io/name: nginx
-                app.kubernetes.io/instance: {{ .Values.instance }}
+                app.kubernetes.io/instance: {{ .Release.Name }}
             topologyKey: kubernetes.io/hostname
