--- a/helm-charts/templates/nginx-imagestream.yaml
+++ b/helm-charts/templates/nginx-imagestream.yaml
@@ -1,6 +1,6 @@
 apiVersion: image.openshift.io/v1
 kind: ImageStream
 metadata:
-  name: {{ .Values.instance }}-nginx
+  name: {{ .Release.Name }}-nginx
   labels:
-    app.kubernetes.io/instance: {{ .Values.instance }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
