--- a/helm-charts/templates/nginx-service.yaml
+++ b/helm-charts/templates/nginx-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.instance }}-nginx
+  name: {{ .Release.Name }}-nginx
   labels:
-    app.kubernetes.io/instance: {{ .Values.instance }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
 spec:
   selector:
     app.kubernetes.io/name: nginx
-    app.kubernetes.io/instance: {{ .Values.instance }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
   ports:
   - port: 8080
