Prevent deletion of modeldata PVC just by uninstalling helm release
Helps to Avoid accidental data loss: the PVC must now be deleted separately

--- a/helm-charts/templates/annif-app-persistentvolumeclaim.yaml
+++ b/helm-charts/templates/annif-app-persistentvolumeclaim.yaml
@@ -4,6 +4,8 @@ metadata:
   name: {{ .Release.Name }}-model-data
   labels:
     app.kubernetes.io/instance: {{ .Release.Name }}
+  annotations:
+    "helm.sh/resource-policy": keep
 spec:
   accessModes:
     - ReadWriteOnce
