Use helm built-in variable for defining instance instead of self-defined one for textract too

--- a/helm-charts/templates/nginx-configmap.yaml
+++ b/helm-charts/templates/nginx-configmap.yaml
@@ -18,7 +18,7 @@ data:
         server {{ .Release.Name }}-annif:8000;
     }
     upstream textract {
-        server {{ .Values.instance }}-textract:{{ .Values.textract.port }};
+        server {{ .Release.Name }}-textract:{{ .Values.textract.port }};
     }
   server-context.conf: |-
     location /v1/ {
