--- a/helm-charts/templates/textract-deployment.yaml
+++ b/helm-charts/templates/textract-deployment.yaml
@@ -1,26 +1,26 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: {{ .Values.instance }}-textract
+  name: {{ .Release.Name }}-textract
   labels:
     app.kubernetes.io/name: textract
-    app.kubernetes.io/instance: {{ .Values.instance }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
 spec:
   replicas: 1
   selector:
     matchLabels:
       app.kubernetes.io/name: textract
-      app.kubernetes.io/instance: {{ .Values.instance }}
+      app.kubernetes.io/instance: {{ .Release.Name }}
   template:
     metadata:
       labels:
         app.kubernetes.io/name: textract
-        app.kubernetes.io/instance: {{ .Values.instance }}
+        app.kubernetes.io/instance: {{ .Release.Name }}
     spec:
       containers:
         - name: textract
           image: >-
-            image-registry.openshift-image-registry.svc:5000/annif/{{ .Values.instance }}-textract:latest
+            image-registry.openshift-image-registry.svc:5000/annif/{{ .Release.Name }}-textract:latest
           livenessProbe:
             exec:
               command: ["curl", "--fail", "localhost:{{ .Values.textract.port }}/status"]
