--- a/helm-charts/templates/textract-service.yaml
+++ b/helm-charts/templates/textract-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.instance }}-textract
+  name: {{ .Release.Name }}-textract
   labels:
-    app.kubernetes.io/instance: {{ .Values.instance }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
 spec:
   selector:
     app.kubernetes.io/name: textract
-    app.kubernetes.io/instance: {{ .Values.instance }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
   ports:
   - port: {{ .Values.textract.port }}
