Remove TODO items
- Model sync with rsync to Annif pod needs write access here
- NGINX is best to remain as DeploymentConfig, because as Deployment it could not have triggers for automatic deployments
- Changes in textract-docker have been merged to main

--- a/helm-charts/templates/nginx-deploymentconfig.yaml
+++ b/helm-charts/templates/nginx-deploymentconfig.yaml
@@ -1,4 +1,4 @@
-kind: DeploymentConfig  # TODO Switch to Deployment?
+kind: DeploymentConfig
 apiVersion: apps.openshift.io/v1
 metadata:
   name: {{ .Release.Name }}-nginx
